getting it to run locally first

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,20 @@
-# docker-compose.yml
 version: '3.8'
+
 services:
   frontend:
     build:
       context: ./frontend
     ports:
       - "80:80"
-    networks:
-      - app-network
+    env_file:
+      - .env  # Pointing to the shared .env file
 
   backend:
     build:
-      context: ./backends
+      context: ./backend
     ports:
-      - "5000:5000"
-    environment:
-      - DATABASE_URL=/app/db/docsynth.db
-      - FRONTEND_ORIGIN=http://frontend:80  # Reference the frontend service
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+      - "5001:5000"
+    env_file:
+      - .env  # Pointing to the shared .env file
+    volumes:
+      - ./backend/db:/app/db
