--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,20 +25,24 @@ exceptiongroup==1.2.1
 filelock==3.14.0
 frozenlist==1.4.1
 fsspec==2024.5.0
-google-api-core==2.15.0
-google-api-python-client==2.115.0
-google-auth==2.26.2
-google-auth-httplib2==0.2.0
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
 google-cloud-core==2.4.1
-google-cloud-firestore==2.14.0
-google-cloud-storage==2.14.0
+google-cloud-firestore
+google-cloud-storage
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.62.0
 greenlet==3.0.3
-grpcio==1.63.0
-grpcio-status==1.60.0
-grpcio-tools==1.63.0
+grpcio
+grpcio-status
+grpcio-tools
+flask
+flask_cors
+gunicorn
+mistralai
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -90,7 +94,7 @@ ply==3.11
 portalocker==2.8.2
 preshed==3.0.9
 proto-plus==1.23.0
-protobuf==5.26.1
+protobuf
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
