--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,8 +40,13 @@ grpcio
 grpcio-status
 grpcio-tools
 flask
+firebase-admin
 flask_cors
+pdfminer.six
+Pillow
+pytesseract
 gunicorn
+gpt4all
 mistralai
 h11==0.14.0
 h2==4.1.0
@@ -115,6 +120,7 @@ safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 six==1.16.0
+stripe
 smart-open==6.4.0
 sniffio==1.3.1
 soupsieve==2.5
