--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     build:
       context: ./frontend
     ports:
-      - "80:80"
+      - "80:3000"
     env_file:
-      - .env
+      - ./.env
+    networks:
+      - app-network
 
   backend:
     build:
@@ -15,7 +17,13 @@ services:
     ports:
       - "5001:5000"
     env_file:
-      - .env
+      - ./.env
     volumes:
       - ./backend/db:/app/db
-    command: gunicorn app:create_app --bind 0.0.0.0:5000  # Ensure this matches your app callable
+    command: gunicorn wsgi:app --bind 0.0.0.0:5000  # Ensure this matches your app callable
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
