--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,10 @@ api/augur/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+env/
+.conda/
+.condarc
+.conda_env/
+.conda_envs/
+.conda/
