celery is running but jobs aren't being completed

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,7 +12,7 @@ stderr_logfile=/var/log/flask.err.log
 stdout_logfile=/var/log/flask.out.log
 
 [program:celery]
-command=celery -A api.celery.celery_app worker --loglevel=info
+command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
