fix files api bug

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
-loglevel=info
+# logfile=/var/log/supervisor/supervisord.log
+# loglevel=info
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
