--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 # loglevel=info
 
 [program:flask]
-command=gunicorn -b 0.0.0.0:3000 wsgi:app
+command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
