--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,20 +1,19 @@
 [supervisord]
 nodaemon=true
-# logfile=/var/log/supervisor/supervisord.log
-# loglevel=info
+loglevel=info
 
 [program:flask]
 command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/flask.err.log
-stdout_logfile=/var/log/flask.out.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr  # Logs streamed to console
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/celery.err.log
-stdout_logfile=/var/log/celery.out.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr  # Logs streamed to console
