--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,12 +3,15 @@ nodaemon=true
 loglevel=info
 
 [program:flask]
-command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 wsgi:app
+command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 \
+  --access-logfile - --error-logfile - wsgi:app  # Logs directly to stdout/stderr
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr  # Logs streamed to console
+stdout_logfile=/dev/stdout  # Redirect to stdout
+stderr_logfile=/dev/stderr  # Redirect to stderr
+stdout_logfile_maxbytes=0   # Disable log rotation
+stderr_logfile_maxbytes=0
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
@@ -16,4 +19,6 @@ directory=/app/api
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr  # Logs streamed to console
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
