--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,8 +3,7 @@ nodaemon=true
 loglevel=info
 
 [program:flask]
-command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 \
-  --access-logfile - --error-logfile - wsgi:app  # Logs directly to stdout/stderr
+command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 wsgi:app  
 directory=/app/api
 autostart=true
 autorestart=true
