concurrency to 4 celery issue debug

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,7 +13,7 @@ stdout_logfile_maxbytes=0   # Disable log rotation
 stderr_logfile_maxbytes=0
 
 [program:celery]
-command=celery -A celery_worker.celery_app worker --loglevel=info
+command=celery -A celery_worker.celery_app worker --loglevel=info --concurrency=4
 directory=/app/api
 autostart=true
 autorestart=true
