fix celery issues

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,6 +3,7 @@ nodaemon=true
 loglevel=info
 
 [program:flask]
+user=myuser  
 command=gunicorn --bind 0.0.0.0:3000 --workers 4 --timeout 120 wsgi:app  
 directory=/app/api
 autostart=true
@@ -13,6 +14,7 @@ stdout_logfile_maxbytes=0   # Disable log rotation
 stderr_logfile_maxbytes=0
 
 [program:celery]
+user=myuser  
 command=celery -A celery_worker.celery_app worker --loglevel=info --concurrency=4
 directory=/app/api
 autostart=true
