added debug logs

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,9 +8,9 @@ command=gunicorn --bind 0.0.0.0:3000 --workers 2 --timeout 120 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout  # Redirect to stdout
-stderr_logfile=/dev/stderr  # Redirect to stderr
-stdout_logfile_maxbytes=0   # Disable log rotation
+stdout_logfile=/var/log/supervisor/app.log  # Aggregate log
+stderr_logfile=/var/log/supervisor/app.log  # Aggregate log
+stdout_logfile_maxbytes=0  # Disable log rotation
 stderr_logfile_maxbytes=0
 
 [program:celery]
@@ -19,7 +19,7 @@ command=celery -A celery_worker.celery_app worker --loglevel=info --concurrency=
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/supervisor/app.log  # Same log as Flask
+stderr_logfile=/var/log/supervisor/app.log  # Same log as Flask
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
