--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,25 +1,20 @@
 [supervisord]
 nodaemon=true
-loglevel=info
+# logfile=/var/log/supervisor/supervisord.log
+# loglevel=info
 
 [program:flask]
-user=myuser  
-command=gunicorn --bind 0.0.0.0:3000 --workers 2 --timeout 120 wsgi:app  
+command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/app.log  # Aggregate log
-stderr_logfile=/var/log/supervisor/app.log  # Aggregate log
-stdout_logfile_maxbytes=0  # Disable log rotation
-stderr_logfile_maxbytes=0
+stderr_logfile=/var/log/flask.err.log
+stdout_logfile=/var/log/flask.out.log
 
 [program:celery]
-user=myuser  
-command=celery -A celery_worker.celery_app worker --loglevel=info --concurrency=2
+command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/app.log  # Same log as Flask
-stderr_logfile=/var/log/supervisor/app.log  # Same log as Flask
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
+stderr_logfile=/var/log/celery.err.log
+stdout_logfile=/var/log/celery.out.log
