--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,20 +1,21 @@
 [supervisord]
-nodaemon=true
-# logfile=/var/log/supervisor/supervisord.log
-# loglevel=info
+nodaemon=true  ; Keeps Supervisor in the foreground (needed for Docker)
+loglevel=info  ; Optional: Controls Supervisor's own log verbosity
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/flask.err.log
-stdout_logfile=/var/log/flask.out.log
+stderr_logfile=/dev/stderr  ; Redirect Flask errors to Docker stderr
+stdout_logfile=/dev/stdout  ; Redirect Flask logs to Docker stdout
+redirect_stderr=true         ; Ensure all logs are merged into stdout
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/celery.err.log
-stdout_logfile=/var/log/celery.out.log
+stderr_logfile=/dev/stderr  ; Redirect Celery errors to Docker stderr
+stdout_logfile=/dev/stdout  ; Redirect Celery logs to Docker stdout
+redirect_stderr=true         ; Ensure all logs are merged into stdout
