--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,21 +1,22 @@
 [supervisord]
-nodaemon=true  ; Keeps Supervisor in the foreground (needed for Docker)
-loglevel=info  ; Optional: Controls Supervisor's own log verbosity
+nodaemon=true  ; Run in the foreground for Docker
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stderr_logfile=/dev/stderr  ; Redirect Flask errors to Docker stderr
-stdout_logfile=/dev/stdout  ; Redirect Flask logs to Docker stdout
-redirect_stderr=true         ; Ensure all logs are merged into stdout
+stdout_logfile=/dev/stdout  ; Use Docker's stdout
+stdout_logfile_maxbytes=0   ; Disable log rotation
+stderr_logfile=/dev/stderr  ; Use Docker's stderr
+stderr_logfile_maxbytes=0   ; Disable log rotation
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stderr_logfile=/dev/stderr  ; Redirect Celery errors to Docker stderr
-stdout_logfile=/dev/stdout  ; Redirect Celery logs to Docker stdout
-redirect_stderr=true         ; Ensure all logs are merged into stdout
+stdout_logfile=/dev/stdout  ; Use Docker's stdout
+stdout_logfile_maxbytes=0   ; Disable log rotation
+stderr_logfile=/dev/stderr  ; Use Docker's stderr
+stderr_logfile_maxbytes=0   ; Disable log rotation
