use sqlite and backup

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,22 +1,26 @@
 [supervisord]
-nodaemon=true  ; Run in the foreground for Docker
+nodaemon=true
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout  ; Use Docker's stdout
-stdout_logfile_maxbytes=0   ; Disable log rotation
-stderr_logfile=/dev/stderr  ; Use Docker's stderr
-stderr_logfile_maxbytes=0   ; Disable log rotation
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout  ; Use Docker's stdout
-stdout_logfile_maxbytes=0   ; Disable log rotation
-stderr_logfile=/dev/stderr  ; Use Docker's stderr
-stderr_logfile_maxbytes=0   ; Disable log rotation
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+
+[program:litestream]
+command=litestream replicate /etc/litestream.yml
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
