--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,6 @@
-[nodaemon]
+[supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
@@ -19,7 +20,7 @@ stderr_logfile=/dev/stderr
 
 [program:litestream]
 command=litestream replicate /etc/litestream.yml
-directory=/app
+directory=/app/db
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
