--- a/litestream.yml
+++ b/litestream.yml
@@ -1,13 +1,7 @@
-# Path to the SQLite database to replicate
-database: app/db/docsynth.db
-
-# Destination GCS path for backup
-destination: gcs://docsynth-fbb02.appspot.com/backup/
-
-# Optional: Periodic snapshot (every hour)
-snapshot-interval: 1h
-
-# Optional: Continuous replication settings
-replication:
-  - type: gcs
-    url: gcs://docsynth-fbb02.appspot.com/backup/
+dbs:
+  - path: /app/db/docsynth.db
+    replicas:
+      - type: gcs
+        bucket: docsynth-fbb02.appspot.com
+        path: backup/
+        snapshot-interval: 1h
