--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,19 +1,22 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord.log
+logfile=/var/log/supervisor/supervisord.log
+user=nonrootuser
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/supervisor/flask.out.log
+stderr_logfile=/var/log/supervisor/flask.err.log
+user=nonrootuser
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/supervisor/celery.out.log
+stderr_logfile=/var/log/supervisor/celery.err.log
+user=nonrootuser
