fiixing the root permissions for my images

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-user=nonrootuser
+user=root  # Ensure supervisord runs as root
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
@@ -10,7 +10,7 @@ autostart=true
 autorestart=true
 stdout_logfile=/var/log/supervisor/flask.out.log
 stderr_logfile=/var/log/supervisor/flask.err.log
-user=nonrootuser
+user=root  # Ensure flask runs as root
 
 [program:celery]
 command=celery -A celery_worker.celery_app worker --loglevel=info
@@ -19,4 +19,4 @@ autostart=true
 autorestart=true
 stdout_logfile=/var/log/supervisor/celery.out.log
 stderr_logfile=/var/log/supervisor/celery.err.log
-user=nonrootuser
+user=root  # Ensure celery runs as root
