testing new logs

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
+logfile=/var/log/syntextai/supervisord.log
 user=root  # Ensure supervisord runs as root
 
 [program:flask]
@@ -8,8 +8,10 @@ command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/flask.out.log
-stderr_logfile=/var/log/supervisor/flask.err.log
+stdout_logfile=/var/log/syntextai/syntextailogs.log
+stderr_logfile=/var/log/syntextai/syntextailogs.log
+logfile_maxbytes=10MB
+logfile_backups=10
 user=root  # Ensure flask runs as root
 
 [program:celery]
@@ -17,6 +19,8 @@ command=celery -A celery_worker.celery_app worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/celery.out.log
-stderr_logfile=/var/log/supervisor/celery.err.log
+stdout_logfile=/var/log/syntextai/syntextailogs.log
+stderr_logfile=/var/log/syntextai/syntextailogs.log
+logfile_maxbytes=10MB
+logfile_backups=10
 user=root  # Ensure celery runs as root
