--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,3 +24,14 @@ stderr_logfile=/var/log/syntextai/syntextailogs.log
 logfile_maxbytes=10MB
 logfile_backups=10
 user=root  # Ensure celery runs as root
+
+[program:litestream]
+command=litestream replicate -config /etc/litestream.yml
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/syntextai/litestream.log
+stderr_logfile=/var/log/syntextai/litestream.log
+logfile_maxbytes=10MB
+logfile_backups=10
+user=root  # Ensure litestream runs as root
