--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,7 +15,7 @@ logfile_backups=10
 user=root  # Ensure flask runs as root
 
 [program:celery]
-command=celery -A celery_worker worker -Q video_audio_queue,document_processing_queue --loglevel=info
+command=celery -A celery_worker worker  worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
