fix issues with config

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,7 +15,7 @@ logfile_backups=10
 user=root  # Ensure flask runs as root
 
 [program:celery]
-command=celery -A celery_worker worker  worker --loglevel=info
+command=celery -A celery_worker worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
