--- a/litestream.yml
+++ b/litestream.yml
@@ -1,4 +1,4 @@
 bs:
-  - path: /db/docsynth.db
+  - path: /app/db/docsynth.db
     replicas:
-      - url: gcs://docsynth-fbb02.appspot.com/backup
+      - url: gcs://docsynth-fbb02.appspot.com/backup.db
