use managed postgres not litestream and sql

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -25,13 +25,13 @@ logfile_maxbytes=10MB
 logfile_backups=10
 user=root  # Ensure celery runs as root
 
-[program:litestream]
-command=litestream replicate -config /etc/litestream.yml
-directory=/app
-autostart=true
-autorestart=true
-stdout_logfile=/var/log/syntextai/litestream.log
-stderr_logfile=/var/log/syntextai/litestream.log
-logfile_maxbytes=10MB
-logfile_backups=10
-user=root  # Ensure litestream runs as root
+# [program:litestream]
+# command=litestream replicate -config /etc/litestream.yml
+# directory=/app
+# autostart=true
+# autorestart=true
+# stdout_logfile=/var/log/syntextai/litestream.log
+# stderr_logfile=/var/log/syntextai/litestream.log
+# logfile_maxbytes=10MB
+# logfile_backups=10
+# user=root  # Ensure litestream runs as root
