--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -130,6 +130,7 @@ soupsieve==2.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
+alembic
 srsly==2.4.8
 striprtf==0.0.26
 sympy==1.12
