--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -156,3 +156,6 @@ redis>=4.0.0,<5.0.0
 celery==5.3.6
 openai-whisper
 ffmpeg-python
+duckduckgo_search==7.2.0
+markdownify==0.14.1
+pgvector==0.3.6
