fix issues with sending too much variables

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,37 +1,27 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/syntextai/supervisord.log
-user=root  # Ensure supervisord runs as root
+logfile=/dev/null
+logfile_maxbytes=0
+user=root
 
 [program:flask]
 command=gunicorn -b 0.0.0.0:3000 wsgi:app
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/syntextai/syntextailogs.log
-stderr_logfile=/var/log/syntextai/syntextailogs.log
-logfile_maxbytes=10MB
-logfile_backups=10
-user=root  # Ensure flask runs as root
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+user=root
 
 [program:celery]
 command=celery -A app.celery worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/syntextai/syntextailogs.log
-stderr_logfile=/var/log/syntextai/syntextailogs.log
-logfile_maxbytes=10MB
-logfile_backups=10
-user=root  # Ensure celery runs as root
-
-# [program:litestream]
-# command=litestream replicate -config /etc/litestream.yml
-# directory=/app
-# autostart=true
-# autorestart=true
-# stdout_logfile=/var/log/syntextai/litestream.log
-# stderr_logfile=/var/log/syntextai/litestream.log
-# logfile_maxbytes=10MB
-# logfile_backups=10
-# user=root  # Ensure litestream runs as root
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+user=root
