--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,7 +16,7 @@ stderr_logfile_maxbytes=0
 user=root
 
 [program:celery]
-command=celery -A app.celery worker --loglevel=info
+command=celery -A app.celery worker --loglevel=info --max-memory-per-child=500000000
 directory=/app/api
 autostart=true
 autorestart=true
