--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ logfile_maxbytes=0
 user=root
 
 [program:flask]
-command=gunicorn --worker-class gevent -w 1 'wsgi:app'
+command=gunicorn --worker-class gevent -w 1 -b 0.0.0.0:3000 'wsgi:app'
 directory=/app/api
 autostart=true
 autorestart=true
