--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,7 +16,7 @@ stderr_logfile_maxbytes=0
 user=root
 
 [program:celery]
-command=celery -A app.celery worker --loglevel=info --max-memory-per-child=500000000
+command=celery -A app.celery worker --pool=gevent --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
@@ -25,3 +25,6 @@ stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 user=root
+numprocs=1
+startsecs=10
+stopwaitsecs=600
