--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,19 +4,20 @@ logfile=/dev/null
 logfile_maxbytes=0
 user=root
 
-[program:flask]
-command=gunicorn --worker-class gevent -w 1 -b 0.0.0.0:3000 'wsgi:app'
+[program:gunicorn]
+command=gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:3000 'wsgi:app'
 directory=/app/api
+user=nobody
+numprocs=1
+stdout_logfile=/var/log/gunicorn/access.log
+stderr_logfile=/var/log/gunicorn/error.log
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
-user=root
+startsecs=10
+stopwaitsecs=600
 
 [program:celery]
-command=celery -A app.celery worker --pool=gevent --loglevel=info
+command=celery -A app.celery worker --pool=eventlet --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
