--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,8 +9,8 @@ command=gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:3000 'wsgi:app'
 directory=/app/api
 user=nobody
 numprocs=1
-stdout_logfile=/var/log/gunicorn/access.log
-stderr_logfile=/var/log/gunicorn/error.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 autostart=true
 autorestart=true
 startsecs=10
