--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,7 +7,7 @@ user=root
 [program:gunicorn]
 command=gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:3000 'wsgi:app'
 directory=/app/api
-user=nobody
+user=root
 numprocs=1
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
