remove eventlet from celery

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,13 +11,15 @@ user=root
 numprocs=1
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
 startsecs=10
 stopwaitsecs=600
 
 [program:celery]
-command=celery -A app.celery worker --pool=eventlet --loglevel=info
+command=celery -A app.celery worker --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
