use eventlet with celery

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,7 +19,7 @@ startsecs=10
 stopwaitsecs=600
 
 [program:celery]
-command=celery -A app.celery worker --loglevel=info
+command=celery -A app.celery worker --loglevel=info --pool=eventlet
 directory=/app/api
 autostart=true
 autorestart=true
