--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ logfile_maxbytes=0
 user=root
 
 [program:gunicorn]
-command=gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:3000 'wsgi:app'
+command=gunicorn --worker-class eventlet -w 1 --timeout 300 --log-level debug 'wsgi:app'
 directory=/app/api
 user=root
 numprocs=1
@@ -17,9 +17,10 @@ autostart=true
 autorestart=true
 startsecs=10
 stopwaitsecs=600
+environment=SSL_CERT_PATH="/etc/ssl/certs/ca-certificates.crt"
 
 [program:celery]
-command=celery -A app.celery worker --loglevel=info --pool=eventlet
+command=celery -A app.celery worker --pool=solo --loglevel=info
 directory=/app/api
 autostart=true
 autorestart=true
@@ -31,3 +32,4 @@ user=root
 numprocs=1
 startsecs=10
 stopwaitsecs=600
+environment=SSL_CERT_PATH="/etc/ssl/certs/ca-certificates.crt"
