test celery with eventlet in dcoker

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,23 +4,20 @@ logfile=/dev/null
 logfile_maxbytes=0
 user=root
 
-[program:gunicorn]
-command=gunicorn --worker-class eventlet -w 1 --timeout 300 --log-level debug 'wsgi:app'
+[program:flask]
+command=gunicorn -k eventlet -b 0.0.0.0:3000 wsgi:application
 directory=/app/api
-user=root
-numprocs=1
+autostart=true
+autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
-autostart=true
-autorestart=true
-startsecs=10
-stopwaitsecs=600
-environment=SSL_CERT_PATH="/etc/ssl/certs/ca-certificates.crt"
+user=root
+environment=PYTHONUNBUFFERED=1
 
 [program:celery]
-command=celery -A app.celery worker --pool=solo --loglevel=info
+command=celery -A celery_app.celery_app worker --loglevel=info --pool=eventlet
 directory=/app/api
 autostart=true
 autorestart=true
@@ -29,7 +26,6 @@ stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 user=root
-numprocs=1
-startsecs=10
-stopwaitsecs=600
-environment=SSL_CERT_PATH="/etc/ssl/certs/ca-certificates.crt"
+environment=PYTHONUNBUFFERED=1
+
+
