--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,8 +4,8 @@ logfile=/dev/null
 logfile_maxbytes=0
 user=root
 
-[program:flask]
-command=gunicorn -k eventlet -b 0.0.0.0:3000 wsgi:application
+[program:fastapi]
+command=uvicorn app:app --host 0.0.0.0 --port 3000 --workers 4
 directory=/app/api
 autostart=true
 autorestart=true
@@ -27,5 +27,3 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 user=root
 environment=PYTHONUNBUFFERED=1
-
-
