--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,30 @@ services:
     image: osasdeeon/syntextai:latest
     container_name: syntextaiapp
     ports:
-      - "3000:3000"  # Expose port 3000 for your app
+      - "3000:3000"
     env_file:
-      - .env  # Load environment variables from .env file
+      - .env
     networks:
-      - syntextai_network  # Use a custom bridge network
+      - syntextai_network
+    deploy:
+      resources:
+        limits:
+          memory: 4G  # Limit to 4GB
 
   searxng:
     image: searxng/searxng:latest
     container_name: searxng
     ports:
-      - "8080:8080"  # Expose port 8080 for SearXNG
+      - "8080:8080"
     volumes:
-      - ./settings.yml:/etc/searxng/settings.yml  # Mount settings.yml into container
+      - ./settings.yml:/etc/searxng/settings.yml
     networks:
-      - syntextai_network  # Use a custom bridge network
+      - syntextai_network
+    deploy:
+      resources:
+        limits:
+          memory: 8G  # Limit to 4GB
 
 networks:
   syntextai_network:
-    driver: bridge  # Custom bridge network
+    driver: bridge
