--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -35,6 +35,7 @@ google-cloud-storage
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.62.0
+google-genai
 greenlet==3.0.3
 grpcio
 grpcio-status
