--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -21,6 +21,7 @@ dataclasses-json==0.6.6
 Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
+dspy
 exceptiongroup==1.2.1
 filelock==3.14.0
 frozenlist==1.4.1
@@ -35,17 +36,20 @@ google-cloud-storage
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.62.0
-google-genai
 greenlet==3.0.3
 grpcio
 grpcio-status
 grpcio-tools
 faster-whisper==1.1.0
+flask
 firebase-admin
+flask-cors
+flask-sse==1.0.0
 pdfminer.six
 Pillow
 pytesseract
 psycopg2-binary==2.9.9
+gunicorn
 gpt4all
 mistralai
 h11==0.14.0
@@ -150,14 +154,15 @@ weasel==0.3.4
 wrapt==1.16.0
 yarl==1.9.4
 redis>=4.0.0,<5.0.0
+celery==5.3.6
 openai-whisper
 ffmpeg-python
 duckduckgo_search==7.2.0
 markdownify==0.14.1
 pgvector==0.3.6
 psycopg2-binary
+supervisor
 fastapi
 uvicorn
+google-generativeai
 python-multipart
-websockets 
-wsproto
