--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,10 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
+        logout: true
         
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
