--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,21 +7,27 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      
+
+    # Debug: Optional step to confirm secrets exist (safe)
+    - name: Confirm Docker secrets are available
+      run: |
+        echo "DOCKER_USERNAME is set: ${{ secrets.DOCKER_USERNAME != '' }}"
+        echo "DOCKER_TOKEN is set: ${{ secrets.DOCKER_TOKEN != '' }}"
+
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
-        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-        
+        logout: false  # Keeps session for subsequent steps
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
@@ -30,18 +36,18 @@ jobs:
         tags: osasdeeon/syntextai:latest
         cache-from: type=registry,ref=osasdeeon/syntextai:buildcache
         cache-to: type=registry,ref=osasdeeon/syntextai:buildcache,mode=max
-        
+
     - name: Copy deploy files to Digital Ocean
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v0.1.3
       with:
         host: ${{ secrets.DO_HOST }}
         username: ${{ secrets.DO_USERNAME }}
         key: ${{ secrets.DO_SSH_KEY }}
         source: "deploy.sh,.env,docker-compose.yml"
         target: "/home/root/"
-        
+
     - name: Deploy to Digital Ocean
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.DO_HOST }}
         username: ${{ secrets.DO_USERNAME }}
@@ -50,12 +56,12 @@ jobs:
         script: |
           cd /home/root/
           docker pull osasdeeon/syntextai:latest
-          # Copy .env to .env if it exists
-          if [ -f "/home/root/.env" ]; then
-            cp /home/root/.env /home/root/.env
+          
+          # Ensure .env exists
+          if [ ! -f ".env" ]; then
+            echo ".env file not found!" && exit 1
           fi
-          # Run the comprehensive deploy script that handles HTTPS and other configurations
+
+          # Make sure the deploy script is executable and run it
           chmod +x deploy.sh
           ./deploy.sh
-          
-  
