--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,14 @@ jobs:
       run: |
         echo "DOCKER_USERNAME is set: ${{ secrets.DOCKER_USERNAME != '' }}"
         echo "DOCKER_TOKEN is set: ${{ secrets.DOCKER_TOKEN != '' }}"
+        
+    # Debug: List files in repository
+    - name: List repository files
+      run: |
+        echo "Repository root:"
+        ls -la
+        echo "\nFrontend directory:"
+        ls -la frontend/ || echo "Frontend directory not found!"
 
     - name: Login to DockerHub
       uses: docker/login-action@v2
