--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,19 @@ jobs:
         mkdir -p api/config
         echo "${{ secrets.FIREBASE_CREDENTIALS_JSON }}" > api/config/credentials.json
         chmod 600 api/config/credentials.json
+        
+    # Create frontend .env file with Firebase web config
+    - name: Create frontend environment file
+      run: |
+        cat << EOF > frontend/.env
+        REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+        REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+        REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+        REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+        REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+        REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+        EOF
+        chmod 600 frontend/.env
     
     - name: Login to DockerHub
       uses: docker/login-action@v2
