--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "chart.js": "^4.5.0",
     "firebase": "^10.7.1",
+    "posthog-js": "^1.253.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
