--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,6 +12,9 @@ services:
         - REACT_APP_FIREBASE_STORAGE_BUCKET=${REACT_APP_FIREBASE_STORAGE_BUCKET}
         - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${REACT_APP_FIREBASE_MESSAGING_SENDER_ID}
         - REACT_APP_FIREBASE_APP_ID=${REACT_APP_FIREBASE_APP_ID}
+        - REACT_APP_STRIPE_API_KEY=${REACT_APP_STRIPE_API_KEY}
+        - REACT_APP_STRIPE_SECRET=${REACT_APP_STRIPE_SECRET}
+        - REACT_APP_STRIPE_ENDPOINT_SECRET=${REACT_APP_STRIPE_ENDPOINT_SECRET}
     container_name: syntextaiapp-local
     working_dir: /app/api
     ports:
@@ -38,6 +41,9 @@ services:
         - REACT_APP_FIREBASE_STORAGE_BUCKET=${REACT_APP_FIREBASE_STORAGE_BUCKET}
         - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${REACT_APP_FIREBASE_MESSAGING_SENDER_ID}
         - REACT_APP_FIREBASE_APP_ID=${REACT_APP_FIREBASE_APP_ID}
+        - REACT_APP_STRIPE_API_KEY=${REACT_APP_STRIPE_API_KEY}
+        - REACT_APP_STRIPE_SECRET=${REACT_APP_STRIPE_SECRET}
+        - REACT_APP_STRIPE_ENDPOINT_SECRET=${REACT_APP_STRIPE_ENDPOINT_SECRET}
     container_name: syntextai-worker-local
     command: python worker.py
     working_dir: /app/api
