--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -133,7 +133,7 @@ soupsieve==2.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
-alembic
+alembic==1.15.2
 srsly==2.4.8
 striprtf==0.0.26
 sympy==1.12
@@ -162,7 +162,7 @@ ffmpeg-python
 duckduckgo_search==7.2.0
 markdownify==0.14.1
 pgvector==0.3.6
-psycopg2-binary
+psycopg2-binary==2.9.10
 supervisor
 fastapi
 uvicorn
