--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -26,7 +26,7 @@ exceptiongroup==1.2.1
 filelock==3.14.0
 frozenlist==1.4.1
 fsspec==2024.5.0
-google-api-core
+google-api-core==2.25.0
 google-api-python-client
 google-auth
 google-auth-httplib2
