--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -26,7 +26,7 @@ exceptiongroup==1.2.1
 filelock==3.14.0
 frozenlist==1.4.1
 fsspec==2024.5.0
-google-api-core==2.25.0
+google-api-core
 google-api-python-client
 google-auth
 google-auth-httplib2
@@ -133,7 +133,7 @@ soupsieve==2.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
-alembic==1.15.2
+alembic
 srsly==2.4.8
 striprtf==0.0.26
 sympy==1.12
@@ -162,7 +162,6 @@ ffmpeg-python
 duckduckgo_search==7.2.0
 markdownify==0.14.1
 pgvector==0.3.6
-psycopg2-binary==2.9.10
 supervisor
 fastapi
 uvicorn
@@ -172,4 +171,4 @@ ffmpeg-python
 websockets
 youtube-transcript-api
 yt-dlp
-posthog==3.5.0
+posthog
